0002 ReplicatorG

* add units to simulation window
* add proper bounds to simulation window
* add warmup/cooldown to machine config
* add simple exerciser / status window
* add color to simulation window
* add up/down arrows to simulation windows
* implement Peter Edworthy ideas on driver instantiation
* have simulation move to a proportional wait time
* fix build time estimation
* add estimate menu item
* add basic machine configuration stuff to XML (axes, resolution, extruders, toolheads, clamps, etc.)
* move to a controller/model/driver system.
* Add an extruder section (temp, start/stop extruder, extruder direction, extruder speed)
* added text boxes to control/display feedrate data
* fix shutdown of driver
* fix windows icons

0001 Replicatorg

* The first release of the IDE.  It will run your GCode files.  It's ugly, but it works.
* convert from Arduino to ReplicatorG
* get new app to build
* convert .pde to .gcode
* get GUI working reliably
* create gcode running thread
* create gcode simulation thread
* create gcode simulation driver
* get text-highlighting up and running
* get machine driver-loading based on XML
* update RunButtonWatcher to work with our running and/or simulating thread (obsolete)
* move percentage / line count to bottom of window.
* remove HandleNewLibrary
* change 'Run' to 'Build'
* get help menu up and running properly (send everyone to website)
* add our ReplicatorG header to every file
* implement support for various gcode pauses / prompts / etc.
* change message dialog to yes/no dialog that allows you to cancel the operation
* test build process on linux
* test serialpassthrough driver
* add simple simulation window
* reformat GUI with different button ordering
* create and add 'pause' button
* update 'build' button graphic to be rotated 90 deg.
* add support for rest of low-hanging m codes
* finish implementation of ToolDrivers
* add a processing driver to calculate build time, look for errors, etc.